Add styles, functions
En interaction.js agregan funciones de validación (validateMail-validateName)  y se agregan a los eventos y funciones correspondientes.
En estilos.css se agregan :hover de los botones
En tickets.html se agrega aria.label a elementos nav

--- a/assets/styles/estilos.css
+++ b/assets/styles/estilos.css
@@ -11,6 +11,16 @@ a {
     background-color:rgb(150, 201, 62)
 }
 
+#btn-comprar:hover{
+    background-color: #198754;
+    color: #fff;
+}
+
+#btn-borrar:hover{
+    background-color:#bb2d3b;
+    color: #fff;
+}
+
 @media (max-width:500px) {
     
     .div-margin {
